edit nav and about me section

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
           <div id="navbarcollapse" class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item"><a href="#intro" class="nav-link link-scroll">Intro</a></li>
-              <li class="nav-item"><a href="#about" class="nav-link link-scroll">About</a></li>
-              <li class="nav-item"><a href="#services" class="nav-link link-scroll">Services</a></li>
-              <li class="nav-item"><a href="#testimonials" class="nav-link link-scroll">Testimonials</a></li>
-              <li class="nav-item"><a href="#references" class="nav-link link-scroll">My work</a></li>
-              <li class="nav-item"><a href="#customers" class="nav-link link-scroll">Clients</a></li>
-              <li class="nav-item"><a href="#contact" class="nav-link link-scroll">Contact</a></li>
+              <li class="nav-item"><a href="#about" class="nav-link link-scroll">O mnie</a></li>
+              <li class="nav-item"><a href="#services" class="nav-link link-scroll">Specjalności</a></li>
+              <!-- <li class="nav-item"><a href="#testimonials" class="nav-link link-scroll">Testimonials</a></li> -->
+              <li class="nav-item"><a href="#references" class="nav-link link-scroll">Projekty</a></li>
+              <li class="nav-item"><a href="#customers" class="nav-link link-scroll">Technologie</a></li>
+              <li class="nav-item"><a href="#contact" class="nav-link link-scroll">Kontakt</a></li>
             </ul>
           </div>
         </div>
@@ -55,55 +55,85 @@
     <section id="intro" style="background: url(img/home.jpg) center center no-repeat; background-size: cover;" class="intro-section pb-2">
       <div class="container text-center">
         <div data-animate="fadeInDown" class="logo"><img src="img/logo-big.png" alt="logo" width="130"></div>
-        <h1 data-animate="fadeInDown" class="text-shadow mb-5">Hello, hola, नमस्ते !</h1>
-        <p data-animate="slideInUp" class="h3 text-shadow text-400">I grind HTML and CSS and then weld them with PHP into beautiful and efficient websites.</p>
+        <h1 data-animate="fadeInDown" class="text-shadow mb-5">Witaj, Привіт, नमस्ते !</h1>
+        <p data-animate="slideInUp" class="h3 text-shadow text-400">
+          Zajmuje się projektowaniem stron WWW, grafiką reklamową, tworzeniem aplikacji webowych. Umiem programować w Javie, Pythonie, C++.
+        </p>
       </div>
     </section>
     <!-- About-->
     <section id="about" class="about-section">
       <div class="container">
         <header class="text-center">
-          <h2 data-animate="fadeInDown" class="title">About me</h2>
+          <h2 data-animate="fadeInDown" class="title">O mnie</h2>
         </header>
         <div class="row">
           <div data-animate="fadeInUp" class="col-lg-6">
-            <p>An sincerity so extremity he additions. Her yet <strong>there truth merit</strong>. Mrs all projecting favourable now unpleasing. Son law garden chatty temper. Oh children provided to mr elegance marriage strongly. Off can admiration prosperous now devonshire diminution law.</p>
-            <p>Received overcame oh sensible so at an. Formed do change merely to county it. <strong>Am separate contempt</strong> domestic to to oh. On relation my so addition branched. Put hearing cottage she norland letters equally prepare too. Replied exposed savings he no viewing as up. Soon body add him hill. No father living really people estate if. Mistake do produce beloved demesne if am pursuit.</p>
-            <p>An sincerity so extremity he additions. Her yet <strong>there truth merit</strong>. Mrs all projecting favourable now unpleasing. Son law garden chatty temper. Oh children provided to mr elegance marriage strongly. Off can admiration prosperous now devonshire diminution law.</p>
+            <h3>Programowanie webowe</h3>
+            <hr />
+            <p style="text-align: justify;">
+              Mieszkam w Łodzi. Lubię czytać książki, spędzać czas na grach strategicznych, czasem pisać wiersze. 
+              Rozwijam się od kilku lat jako projektant stron internetowych, 
+              zgłębiam zagadnienia z zakresu nowoczesnych technologii w obszarze: <strong>projektowania graficznego i programowania</strong>.
+            </p>
+            <p style="text-align: justify;">
+              Swoją pierwszą aplikację napisałem w <strong>ActionScript 3</strong> z drobną pomocą interfejsu graficznego aplikacji <strong>Adobe Flash</strong>. 
+              Od zawsze fascynowały mnie technologie internetowe, więc zacząłem rozwijać się jako <strong>webdeveloper</strong>. 
+              W ciągu kilku lat zglębiłem wiele metodologii i języków programowania. Stworzyłem kilka udanych stron internetowych.
+            </p>
+            <h3>Kino</h3>
+            <hr />
+            <p style="text-align: justify;">
+              Pasjonuje mnie sci-fi, obrazy światów utopii i antyutopii. 
+              Filmowa tematyka z pogranicza jawy i snu, klimaty oniryczno-surrealistyczne pociągnęły mnie w stronę Hasa, 
+              a studia nad materią filmową w kierunki fantastyki, sci-fi i nowoczesnych technologii. 
+            </p>
           </div>
           <div data-animate="fadeInUp" class="col-lg-6">
             <div class="skill-item">
-              <div class="progress-title">PHP</div>
+              <div class="progress-title">HTML/CSS</div>
               <div class="progress">
-                <div role="progressbar" style="width: 60%" aria-valuenow="0" aria-valuemin="60" aria-valuemax="100" class="progress-bar progress-bar-skill1"></div>
+                <div role="progressbar" style="width: 80%" aria-valuenow="0" aria-valuemin="80" aria-valuemax="100" class="progress-bar progress-bar-skill1"></div>
               </div>
             </div>
             <div class="skill-item">
-              <div class="progress-title">Javascript</div>
+              <div class="progress-title">Grafika reklamowa</div>
               <div class="progress">
-                <div role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="60" aria-valuemax="100" class="progress-bar progress-bar-skill2"></div>
+                <div role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" class="progress-bar progress-bar-skill2"></div>
               </div>
             </div>
             <div class="skill-item">
-              <div class="progress-title">HTML coding</div>
+              <div class="progress-title">Wordpress</div>
               <div class="progress">
                 <div role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" class="progress-bar progress-bar-skill3"></div>
               </div>
             </div>
             <div class="skill-item">
-              <div class="progress-title">SEO</div>
+              <div class="progress-title">SQL</div>
               <div class="progress">
-                <div role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" class="progress-bar progress-bar-skill4"></div>
+                <div role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" class="progress-bar progress-bar-skill3"></div>
               </div>
             </div>
             <div class="skill-item">
-              <div class="progress-title">SEM</div>
+              <div class="progress-title">Java</div>
               <div class="progress">
-                <div role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" class="progress-bar progress-bar-skill5"></div>
+                <div role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" class="progress-bar progress-bar-skill4"></div>
+              </div>
+            </div>
+            <div class="skill-item">
+              <div class="progress-title">Python</div>
+              <div class="progress">
+                <div role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" class="progress-bar progress-bar-skill5"></div>
+              </div>
+            </div>
+            <div class="skill-item">
+              <div class="progress-title">C++</div>
+              <div class="progress">
+                <div role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" class="progress-bar progress-bar-skill6"></div>
               </div>
             </div>
           </div>
-          <div data-animate="fadeInUp" class="col-sm-6 mx-auto mt-5"><img src="img/about.jpg" alt="This is me - IT worker" class="image rounded-circle img-fluid"></div>
+          <div data-animate="fadeInUp" class="col-sm-6 mx-auto mt-5"><img src="img/about.png" alt="This is me - IT worker" class="image rounded-circle img-fluid"></div>
         </div>
       </div>
     </section>
@@ -111,22 +141,28 @@
     <section id="services" class="bg-gradient services-section">
       <div class="container">
         <header class="text-center">
-          <h2 data-animate="fadeInDown" class="title">Services</h2>
+          <h2 data-animate="fadeInDown" class="title">Specjalności</h2>
         </header>
         <div class="row services text-center">
           <div data-animate="fadeInUp" class="col-lg-4">
             <div class="icon"><i class="fa fa-search"></i></div>
-            <h3 class="heading mb-3 text-400">Consulting</h3>
-            <p class="text-left description">On on produce colonel pointed. Just four sold need over how any. In to september suspicion determine he prevailed admitting. On adapted an as affixed limited on. Giving cousin warmly things no spring mr be abroad. Relation breeding be as repeated strictly followed margaret. One gravity son brought shyness waiting regular led ham.</p>
+            <h3 class="heading mb-3 text-400">Grafika reklamowa</h3>
+            <p class="text-center description">
+              Banery reklamowe, broszury do druku, infografiki, logo, identyfikacja wizualna, prezentacje, 
+              wykonywanie i obróbka zdjęć.
+              <br />
+              <br />
+              <strong>Photoshop, Illustrator, Flash, Indesign, Corel Draw</strong>
+            </p>
           </div>
           <div data-animate="fadeInUp" class="col-lg-4">
             <div class="icon"><i class="fa fa-html5"></i></div>
-            <h3 class="heading mb-3 text-400">HTML coding</h3>
+            <h3 class="heading mb-3 text-400">Webdesign</h3>
             <p class="text-left description">Manor we shall merit by chief wound no or would. Oh towards between subject passage sending mention or it. Sight happy do burst fruit to woody begin at. Assurance perpetual he in oh determine as.</p>
           </div>
           <div data-animate="fadeInUp" class="col-lg-4">
             <div class="icon"><i class="fa fa-tachometer"></i></div>
-            <h3 class="heading mb-3 text-400">PHP webdelopment</h3>
+            <h3 class="heading mb-3 text-400">Programowanie</h3>
             <p class="text-left description">Rooms oh fully taken by worse do. Points afraid but may end law lasted. Was out laughter raptures returned outweigh. Luckily cheered colonel me do we attacks on highest enabled. Tried law yet style child. Bore of true of no be deal.</p>
           </div>
         </div>
