working with section projects

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>IT Worker | responsive portfolio template</title>
+    <title>Cecherz | strona prywatna</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -35,7 +35,7 @@
     <!-- navbar-->
     <header class="header">
       <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container"><a href="#intro" class="navbar-brand scrollTo">IT Worker</a>
+        <div class="container"><a href="#intro" class="navbar-brand scrollTo">Cecherz</a>
           <button type="button" data-toggle="collapse" data-target="#navbarcollapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><span class="fa fa-bars"></span></button>
           <div id="navbarcollapse" class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
@@ -158,23 +158,33 @@
           <div data-animate="fadeInUp" class="col-lg-4">
             <div class="icon"><i class="fa fa-html5"></i></div>
             <h3 class="heading mb-3 text-400">Webdesign</h3>
-            <p class="text-left description">Manor we shall merit by chief wound no or would. Oh towards between subject passage sending mention or it. Sight happy do burst fruit to woody begin at. Assurance perpetual he in oh determine as.</p>
+            <p class="text-center description">
+              Strony firmowe, kodowanie layoutów, witryny z wykorzystaniem CMS-ów: sklepy, blogi, platformy edukacyjne.
+              <br />
+              <br />
+              <strong>HTML/CSS, Bootstrap, Wordpress</strong> 
+            </p>
           </div>
           <div data-animate="fadeInUp" class="col-lg-4">
             <div class="icon"><i class="fa fa-tachometer"></i></div>
             <h3 class="heading mb-3 text-400">Programowanie</h3>
-            <p class="text-left description">Rooms oh fully taken by worse do. Points afraid but may end law lasted. Was out laughter raptures returned outweigh. Luckily cheered colonel me do we attacks on highest enabled. Tried law yet style child. Bore of true of no be deal.</p>
+            <p class="text-center description">
+              Aplikacje webowe: administracja, wdrożenia i wsparcie. Obsługa gotowych systemów, tworzenie i poprawa funkcjonalności.
+              <br />
+              <br />
+              <strong>Spring, Django, REST, C++</strong> 
+            </p>
           </div>
         </div>
         <hr data-animate="fadeInUp">
         <div data-animate="fadeInUp" class="text-center">
-          <p class="lead">Would you like to know more or just discuss something?</p>
-          <p><a href="#contact" class="btn btn-outline-light link-scroll">Contact me</a></p>
+          <p class="lead">Chcesz dowiedzieć się więcej lub po prostu o czymś porozmawiać?</p>
+          <p><a href="#contact" class="btn btn-outline-light link-scroll">Napisz do mnie</a></p>
         </div>
       </div>
     </section>
     <!-- Testimonials-->
-    <section id="testimonials" class="testimonials-section bg-gray">
+    <!-- <section id="testimonials" class="testimonials-section bg-gray">
       <div class="container">
         <header class="text-center mb-2">
           <h2 data-animate="fadeInUp" class="title">My customers said<br><span>about me</span></h2>
@@ -253,7 +263,7 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
     <!-- Statistics-->
     <section id="statistics" data-dir="up" style="background: url(&quot;img/parallax.jpg&quot;);" class="statistics-section text-white parallax parallax">
       <div class="container">
@@ -261,25 +271,25 @@
           <div data-animate="fadeInUp" class="col-lg-3 col-md-6">
             <div class="item">
               <div class="icon"><i class="fa fa-align-justify"></i></div>
-              <h5 class="text-400 mt-4 text-uppercase"><span class="counter">120</span><br>Websites</h5>
-            </div>
-          </div>
-          <div data-animate="fadeInUp" class="col-lg-3 col-md-6">
-            <div class="item">
-              <div class="icon"><i class="fa fa-users"></i></div>
-              <h5 class="text-400 mt-4 text-uppercase"><span class="counter">50</span><br>Satisfied Clients</h5>
+              <h5 class="text-400 mt-4 text-uppercase"><span class="counter">9</span><br>Projekty HTML/CSS</h5>
             </div>
           </div>
           <div data-animate="fadeInUp" class="col-lg-3 col-md-6">
             <div class="item">
               <div class="icon"><i class="fa fa-copy"></i></div>
-              <h5 class="text-400 mt-4 text-uppercase"><span class="counter">320</span><br>Projects</h5>
+              <h5 class="text-400 mt-4 text-uppercase"><span class="counter">4</span><br>Strony oparte o CMS-y</h5>
+            </div>
+          </div>
+          <div data-animate="fadeInUp" class="col-lg-3 col-md-6">
+            <div class="item">
+              <div class="icon"><i class="fa fa-users"></i></div>
+              <h5 class="text-400 mt-4 text-uppercase"><span class="counter">4</span><br>Aplikacje webowe</h5>
             </div>
           </div>
           <div data-animate="fadeInUp" class="col-lg-3 col-md-6">
             <div class="item">
               <div class="icon"><i class="fa fa-font"></i></div>
-              <h5 class="text-400 mt-4 text-uppercase"><span class="counter">333</span><br>Magazines and Brochures</h5>
+              <h5 class="text-400 mt-4 text-uppercase"><span class="counter">177</span><br>Projekty graficzne</h5>
             </div>
           </div>
         </div>
@@ -294,15 +304,17 @@
       <div class="container">
         <div class="col-sm-12">
           <div class="mb-5 text-center">
-            <h2 data-animate="fadeInUp" class="title">My work</h2>
-            <p data-animate="fadeInUp" class="lead">I have worked on dozens of projects so I have picked only the latest for you.</p>
+            <h2 data-animate="fadeInUp" class="title">Moje projekty</h2>
+            <p data-animate="fadeInUp" class="lead">Pracowałem przy różnych projektach, wybrałem dla Ciebie najciekawsze.</p>
           </div>
           <ul id="filter" data-animate="fadeInUp">
-            <li class="active"><a href="#" data-filter="all">All</a></li>
-            <li><a href="#" data-filter="webdesign">Webdesign</a></li>
-            <li><a href="#" data-filter="seo">SEO</a></li>
-            <li><a href="#" data-filter="marketing">Marketing</a></li>
-            <li><a href="#" data-filter="other">Other</a></li>
+            <li class="active"><a href="#" data-filter="all">Wszystkie</a></li>
+            <li class="active"><a href="#" data-filter="html-css">HTML/CSS</a></li>
+            <li><a href="#" data-filter="wordpress">Wordpress</a></li>
+            <li><a href="#" data-filter="bootstrap">Bootstrap</a></li>
+            <li><a href="#" data-filter="graphic-2d">Grafika reklamowa</a></li>
+            <li><a href="#" data-filter="java">Java</a></li>
+            <li><a href="#" data-filter="python">Python</a></li>
           </ul>
           <div id="detail">
             <div class="row">
@@ -318,22 +330,52 @@
           <!-- Reference detail-->
           <div id="references-masonry" data-animate="fadeInUp">
             <div class="row">
-                  <div data-category="webdesign" class="reference-item col-lg-3 col-md-6">
-                    <div class="reference"><a href="#"><img src="img/portfolio-1.jpg" alt="" class="img-fluid">
+                  <div data-category="html-css" class="reference-item col-lg-3 col-md-6">
+                    <div class="reference"><a href="#"><img src="img/portfolio-1.jpg" alt="" class="img-fluid whitesmoke-frame">
                         <div class="overlay">
                           <div class="inner">
-                            <h3 class="h4 reference-title">Project name</h3>
-                            <p>Short project description goes here...</p>
+                            <h3 class="h4 reference-title">WEB-DESIGN TOOLS</h3>
+                            <p>
+                              Interaktywna strona WWW w technologii HTML5
+                            </p>
                           </div>
                         </div></a>
-                      <div data-images="img/main-slider1.jpg,img/main-slider2.jpg,img/main-slider3.jpg" class="sr-only reference-description">
-                        <p>Projecting surrounded literature yet delightful alteration but bed men. Open are from long why cold. If must snug by upon sang loud left. As me do preference entreaties compliment motionless ye literature. Day behaviour explained law remainder. Produce can cousins account you pasture. Peculiar delicate an pleasant provided do perceive.</p>
-                        <p>Sitting mistake towards his few country ask. You delighted two rapturous six depending objection happiness something the. Off nay impossible dispatched partiality unaffected. Norland adapted put ham cordial. Ladies talked may shy basket narrow see. Him she distrusts questions sportsmen. Tolerably pretended neglected on my earnestly by. Sex scale sir style truth ought.</p>
-                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-download"></i> Download case study</a></p>
+                      <div 
+                        data-images="img/main-slider1.jpg,img/main-slider2.jpg,img/main-slider3.jpg" 
+                        class="sr-only reference-description">
+                        <h4 class="text-center">
+                          Sposoby budowania interaktywnych stron WWW w technologii HTML5,
+                          z wykorzystaniem narzędzi firmy Adobe.
+                        </h4>
+                        <hr />
+                        <p style="text-align: justify;">
+                          Witrynę wykonałem jako projekt zaliczeniowy studiów podyplomowych: 
+                          <a href="http://www.kis.p.lodz.pl/podyplomowe.html?lang=pl">Grafika i Techniki Multimedialne w Instytucie Informatyki Stosowanej Politechniki Łódzkiej</a>
+                          Posłużyłem się najprostszą, a zarazem najbardziej
+                          fundamentalną metodą: stworzyłem witrynę odręcznie. 
+                          Zapoznałem się z każdą linijką kodu, który osadzałem.
+                        </p>
+                        <p style="text-align: justify;">
+                          Projekt, który prezentuje wykorzystuje najbardziej podstawowe technologie webowe - HTML5
+                          (połączenie funkcjonalności XHTML i możliwości JavaScriptu) oraz CSS3. Odwołuje się w nim do
+                          zainteresowań związanych z projektowaniem graficznych przy pomocy ulubionych narzędzi firmy Adobe.
+                          Zamieściłem w nim obszery katalog prac różnych twórców oraz kilka swoich. 
+                        </p>
+                        <p class="buttons text-center">
+                          <a href="http://html5.cecherz.pl/dw.html" class="btn btn-outline-primary">
+                            <i class="fa fa-globe"></i> 
+                            Odwiedź stronę
+                          </a>
+                          <a href="http://html5.cecherz.pl/doc/czytaj.pdf" class="btn btn-outline-primary">
+                            <i class="fa fa-download"></i> 
+                            Pobierz dokumentację  
+                          </a>
+                        </p>
                       </div>
                     </div>
                   </div>
-                  <div data-category="seo" class="reference-item col-lg-3 col-md-6">
+
+                  <!-- <div data-category="seo" class="reference-item col-lg-3 col-md-6">
                     <div class="reference"><a href="#"><img src="img/portfolio-2.jpg" alt="" class="img-fluid">
                         <div class="overlay">
                           <div class="inner">
@@ -437,7 +479,7 @@
                         <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-download"></i> Download case study</a></p>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
             </div>
           </div>
         </div>
@@ -474,7 +516,7 @@
     <section id="contact" data-animate="bounceIn" class="contact-section contact">
       <div class="container">
         <header class="text-center">
-          <h2 class="title">Contact me</h2>
+          <h2 class="title">Napisz do mnie</h2>
         </header>
         <div class="row">
           <div class="col-lg-8 mx-auto">
@@ -483,22 +525,22 @@
               <div class="controls">
                 <div class="row">
                   <div class="col-md-6">
-                    <input type="text" name="name" placeholder="Your firstname *" required="required" class="form-control">
+                    <input type="text" name="name" placeholder="Imię *" required="required" class="form-control">
                   </div>
                   <div class="col-md-6">
-                    <input type="text" name="surname" placeholder="Your lastname *" required="required" class="form-control">
+                    <input type="text" name="surname" placeholder="Nazwisko *" required="required" class="form-control">
                   </div>
                   <div class="col-md-6">
-                    <input type="text" name="email" placeholder="Your email *" required="required" class="form-control">
+                    <input type="text" name="email" placeholder="E-mail *" required="required" class="form-control">
                   </div>
                   <div class="col-md-6">
-                    <input type="text" name="phone" placeholder="Your phone" class="form-control">
+                    <input type="text" name="phone" placeholder="Telefon" class="form-control">
                   </div>
                   <div class="col-md-12">
-                    <textarea name="message" placeholder="Message for me *" rows="4" required="required" class="form-control"></textarea>
+                    <textarea name="message" placeholder="Treść wiadomości *" rows="4" required="required" class="form-control"></textarea>
                   </div>
                   <div class="col-md-12 text-center">
-                    <button type="submit" class="btn btn-outline-primary">Send message</button>
+                    <button type="submit" class="btn btn-outline-primary">Wyślij wiadomość</button>
                   </div>
                 </div>
               </div>
