--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="no-scroll">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -331,7 +331,7 @@
           <div id="references-masonry" data-animate="fadeInUp">
             <div class="row">
                   <div data-category="html-css" class="reference-item col-lg-3 col-md-6">
-                    <div class="reference"><a href="#"><img src="img/portfolio-1.jpg" alt="" class="img-fluid whitesmoke-frame">
+                    <div class="reference"><a href="#"><img src="img/portfolio-1.jpg" alt="" class="img-fluid gainsboro-frame">
                         <div class="overlay">
                           <div class="inner">
                             <h3 class="h4 reference-title">WEB-DESIGN TOOLS</h3>
@@ -375,22 +375,37 @@
                     </div>
                   </div>
 
-                  <!-- <div data-category="seo" class="reference-item col-lg-3 col-md-6">
-                    <div class="reference"><a href="#"><img src="img/portfolio-2.jpg" alt="" class="img-fluid">
+                  <div data-category="bootstrap" class="reference-item col-lg-3 col-md-6">
+                    <div class="reference"><a href="#"><img src="img/portfolio-2.jpg" alt="" class="img-fluid gainsboro-frame">
                         <div class="overlay">
                           <div class="inner">
-                            <h3 class="h4 reference-title">Project name 2</h3>
-                            <p>Short project description goes here...</p>
+                            <h3 class="h4 reference-title">PJS Piotr Stachowicz</h3>
+                            <p>Studio Grafiki i Fotografii Cyfrowej</p>
                           </div>
                         </div></a>
-                      <div data-images="img/main-slider3.jpg,img/main-slider1.jpg" class="sr-only reference-description">
-                        <p>Projecting surrounded literature yet delightful alteration but bed men. Open are from long why cold. If must snug by upon sang loud left. As me do preference entreaties compliment motionless ye literature. Day behaviour explained law remainder. Produce can cousins account you pasture. Peculiar delicate an pleasant provided do perceive.</p>
-                        <p>Sitting mistake towards his few country ask. You delighted two rapturous six depending objection happiness something the. Off nay impossible dispatched partiality unaffected. Norland adapted put ham cordial. Ladies talked may shy basket narrow see. Him she distrusts questions sportsmen. Tolerably pretended neglected on my earnestly by. Sex scale sir style truth ought.</p>
-                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-download"></i> Download case study</a></p>
+                      <div data-images="img/main-slider2-1.jpg,img/main-slider2-2.jpg, img/main-slider2-3.jpg" class="sr-only reference-description">
+                        <p style="text-align: justify;">
+                          Strona przebudowana a minimalistyczny layout wykonany od początku. Witryna wykonana 
+                          przy pomocy frameworka <a href="https://getbootstrap.com/docs/3.3/">Bootstrap 3</a>
+                        </p>
+                        <p style="text-align: justify;">
+                          Wprowadzone funkcjonalności po stronie serwera: obsługa formularza kontaktowego. 
+                          Dodanie <a href="https://www.google.pl/maps">Google Maps</a> 
+                          oraz mapy strony dla ułatwienia nawigacji i optymalizacji pod kątem SEO.
+                          Modernizacja i poprawa biblioteki grafik. Stworzenie i reorganizacja list dostępnego
+                          asortymentu w branży DTP.    
+                        </p>
+                        <p class="buttons text-center">
+                          <a href="http://www.pjs-studio.net.pl/index.html" class="btn btn-outline-primary">
+                            <i class="fa fa-globe"></i> 
+                            Odwiedź stronę
+                          </a>
+                          </p>
                       </div>
                     </div>
                   </div>
-                  <div data-category="marketing" class="reference-item col-lg-3 col-md-6">
+
+                  <!-- <div data-category="marketing" class="reference-item col-lg-3 col-md-6">
                     <div class="reference"><a href="#"><img src="img/portfolio-3.jpg" alt="" class="img-fluid">
                         <div class="overlay">
                           <div class="inner">
@@ -559,7 +574,7 @@
           </div>
           <!-- /.6-->
           <div class="col-md-6 text-center text-lg-right mt-4 mt-lg-0">
-            <p>© 2018 Your name goes here. All rights reserved.</p>
+            <p>© 2022 Kamil Cecherz. Wszelkie prawa zastrzeżone.</p>
           </div>
           <div class="col-12 mt-4">
             <p class="template-bootstrapious">Template by <a href='https://bootstrapious.com/p/bootstrap-carousel'>Bootstrapious</a> & <a href="https://fity.cz/ostrava">Fity</a></p>
