--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
         <div data-animate="fadeInDown" class="logo"><img src="img/logo-big.png" alt="logo" width="130"></div>
         <h1 data-animate="fadeInDown" class="text-shadow mb-5">Witaj, Привіт, नमस्ते !</h1>
         <p data-animate="slideInUp" class="h3 text-shadow text-400">
-          Zajmuje się projektowaniem stron WWW, grafiką reklamową, tworzeniem aplikacji webowych. Umiem programować w Javie, Pythonie, C++.
+          Zajmuje się projektowaniem stron WWW, grafiką reklamową, 
+          tworzeniem aplikacji webowych. Umiem programować w Javie, Pythonie, C++.
         </p>
       </div>
     </section>
@@ -405,22 +406,40 @@
                     </div>
                   </div>
 
-                  <!-- <div data-category="marketing" class="reference-item col-lg-3 col-md-6">
-                    <div class="reference"><a href="#"><img src="img/portfolio-3.jpg" alt="" class="img-fluid">
+                  <div data-category="bootstrap" class="reference-item col-lg-3 col-md-6">
+                    <div class="reference"><a href="#"><img src="img/portfolio-3.jpg" alt="" class="img-fluid gainsboro-frame">
                         <div class="overlay">
                           <div class="inner">
-                            <h3 class="h4 reference-title">Project name 3</h3>
-                            <p>Short project description goes here...</p>
+                            <h3 class="h4 reference-title">Foto Jadwiga</h3>
+                            <p>Profesjonalne studio portretowe</p>
                           </div>
                         </div></a>
-                      <div data-images="img/main-slider1.jpg,img/main-slider2.jpg,img/main-slider3.jpg" class="sr-only reference-description">
-                        <p>Projecting surrounded literature yet delightful alteration but bed men. Open are from long why cold. If must snug by upon sang loud left. As me do preference entreaties compliment motionless ye literature. Day behaviour explained law remainder. Produce can cousins account you pasture. Peculiar delicate an pleasant provided do perceive.</p>
-                        <p>Sitting mistake towards his few country ask. You delighted two rapturous six depending objection happiness something the. Off nay impossible dispatched partiality unaffected. Norland adapted put ham cordial. Ladies talked may shy basket narrow see. Him she distrusts questions sportsmen. Tolerably pretended neglected on my earnestly by. Sex scale sir style truth ought.</p>
-                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-download"></i> Download case study</a></p>
+                      <div data-images="img/main-slider3-1.jpg,img/main-slider3-2.jpg,img/main-slider3-3.jpg" class="sr-only reference-description">
+                        <p style="text-align: justify;">
+                          Przebudowa struktury kodu strony Foto Jadwiga przy pomocy frameworka 
+                          <a href="https://getbootstrap.com/docs/3.3/">Bootstrap 3</a>. 
+                          Stronie pierwotnie tworzona w technologii Flash.
+                        </p>
+                        <p style="text-align: justify;">
+                          Optymilizacja, reognizacja i przebudowa galerii strony. Stworzenie układu kafelkowego,
+                          podział na kategorie w celu klarownego wyeksponowania usług. Dodanie 
+                          <a href="https://www.google.pl/maps">Google Maps</a>, listy partnerów oraz nowej stopki.
+                          <br />
+                          <br />
+                          Pierwotny wygląd strony został zachowany mimo wprowadzenia standardu 
+                          <a href="https://dev.w3.org/html5/spec-LC/">HTML5</a>.  
+                        </p>
+                        <p class="buttons text-center">
+                          <a href="http://www.fotojadwiga.pl/index.html" class="btn btn-outline-primary">
+                            <i class="fa fa-globe"></i> 
+                            Odwiedź stronę
+                          </a>
+                        </p>
                       </div>
                     </div>
                   </div>
-                  <div data-category="marketing" class="reference-item col-lg-3 col-md-6">
+
+                  <!-- <div data-category="marketing" class="reference-item col-lg-3 col-md-6">
                     <div class="reference"><a href="#"><img src="img/portfolio-4.jpg" alt="" class="img-fluid">
                         <div class="overlay">
                           <div class="inner">
