--- a/index.html
+++ b/index.html
@@ -439,37 +439,70 @@
                     </div>
                   </div>
 
-                  <!-- <div data-category="marketing" class="reference-item col-lg-3 col-md-6">
-                    <div class="reference"><a href="#"><img src="img/portfolio-4.jpg" alt="" class="img-fluid">
+                  <div data-category="wordpress" class="reference-item col-lg-3 col-md-6">
+                    <div class="reference"><a href="#"><img src="img/portfolio-4.jpg" alt="" class="img-fluid gainsboro-frame">
                         <div class="overlay">
                           <div class="inner">
-                            <h3 class="h4 reference-title">Project name 4</h3>
-                            <p>Short project description goes here...</p>
+                            <h3 class="h4 reference-title">Drift</h3>
+                            <p>Autoszkoła w Łodzi</p>
                           </div>
                         </div></a>
-                      <div data-images="img/main-slider1.jpg,img/main-slider2.jpg,img/main-slider3.jpg" class="sr-only reference-description">
-                        <p>Projecting surrounded literature yet delightful alteration but bed men. Open are from long why cold. If must snug by upon sang loud left. As me do preference entreaties compliment motionless ye literature. Day behaviour explained law remainder. Produce can cousins account you pasture. Peculiar delicate an pleasant provided do perceive.</p>
-                        <p>Sitting mistake towards his few country ask. You delighted two rapturous six depending objection happiness something the. Off nay impossible dispatched partiality unaffected. Norland adapted put ham cordial. Ladies talked may shy basket narrow see. Him she distrusts questions sportsmen. Tolerably pretended neglected on my earnestly by. Sex scale sir style truth ought.</p>
-                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-download"></i> Download case study</a></p>
+                      <div data-images="img/main-slider4-1.jpg,img/main-slider4-2.jpg,img/main-slider4-3.jpg, img/main-slider4-4.jpg" class="sr-only reference-description">
+                        <p style="text-align: justify;">
+                          Strona obsługiwana przy pomocy silnika Wordpress. Wykonana na zlecenie 
+                          Ośrodka Szkolenia Kierowców "Drift" Arkadiusz Domińczak w roku 2021
+                        </p>
+                        <p style="text-align: justify;">
+                          Wykorzystałem darmowy motyw 
+                          <a href="https://www.vwthemes.com/themes/wp-automobile-wordpress-theme/">VW Autombile Lite</a>
+                          którego układ kolorystyczny i zestawy grafik zostały zmienione. Witryna została wyposażona
+                          w podstrony/sekcje: cennik, galeria, opinie klientów, formularz zapisu, mapy dojazdu, media
+                          społecznościowe w postaci ikon. Wykorzystałem dodatkowe CSS i HTML do stworzenia autonmicznych elementów
+                          nie wchodzących w skład motywu. Witryna korzysta z wtyczek SEO charakterycznych dla Wordpress'a
+                          zbiera statyki odwiedzin gromadząc je przy pomocy 
+                          <a href="https://www.nazwa.pl/blog/czym-jest-google-analytics">Google Analitics</a>.  
+                        </p>
+                        <p class="buttons text-center">
+                          <a href="https://auto-drift.pl/" class="btn btn-outline-primary">
+                            <i class="fa fa-globe"></i> 
+                            Odwiedź stronę
+                          </a>
+                        </p>
                       </div>
                     </div>
                   </div>
-                  <div data-category="webdesign" class="reference-item col-lg-3 col-md-6">
-                    <div class="reference"><a href="#"><img src="img/portfolio-5.jpg" alt="" class="img-fluid">
+
+                  <div data-category="wordpress" class="reference-item col-lg-3 col-md-6">
+                    <div class="reference"><a href="#"><img src="img/portfolio-5.jpg" alt="" class="img-fluid gainsboro-frame">
                         <div class="overlay">
                           <div class="inner">
-                            <h3 class="h4 reference-title">Project name 5</h3>
-                            <p>Short project description goes here...</p>
+                            <h3 class="h5 reference-title">Stowarzyszenie Jeti</h3>
+                            <p>NGO: wsparcie i pomoc niepełnosprawnym</p>
                           </div>
                         </div></a>
-                      <div data-images="img/main-slider1.jpg,img/main-slider2.jpg,img/main-slider3.jpg" class="sr-only reference-description">
-                        <p>Projecting surrounded literature yet delightful alteration but bed men. Open are from long why cold. If must snug by upon sang loud left. As me do preference entreaties compliment motionless ye literature. Day behaviour explained law remainder. Produce can cousins account you pasture. Peculiar delicate an pleasant provided do perceive.</p>
-                        <p>Sitting mistake towards his few country ask. You delighted two rapturous six depending objection happiness something the. Off nay impossible dispatched partiality unaffected. Norland adapted put ham cordial. Ladies talked may shy basket narrow see. Him she distrusts questions sportsmen. Tolerably pretended neglected on my earnestly by. Sex scale sir style truth ought.</p>
-                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-download"></i> Download case study</a></p>
+                      <div data-images="img/main-slider5-1.jpg,img/main-slider5-2.jpg,img/main-slider5-3.jpg,img/main-slider5-4.jpg" class="sr-only reference-description">
+                        <p style="text-align: justify;">
+                          Strona obsługiwana przy pomocy silnika Wordpress. Strona wykonana w ramach
+                          obecnej współpracy z NGO, którego jestem członkiem.
+                        </p>
+                        <p style="text-align: justify;">
+                          Witryna, której wygląd i fukcjonalność zostały stworzone praktycznie od zera na bazie szablonu
+                          <a href="https://materialwp.com/">MaterialWP</a>. Postawiłem na minimalistyczny layout
+                          i kolorystykę. Wszystkie sekcje zostały stworzony o oparciu o prywatne zdjęcia. Identyfikacja wizualna
+                          obecna na stronie: logo i barwy - zostały wcześniej opracowane przeze mnie. Praca bezpośrednio na plikach
+                          szablonu napisanych w PHP. 
+                        </p>
+                        <p class="buttons text-center">
+                          <a href="https://www.jeti.org.pl/" class="btn btn-outline-primary">
+                            <i class="fa fa-globe"></i> 
+                            Odwiedź stronę
+                          </a>
+                        </p>
                       </div>
                     </div>
                   </div>
-                  <div data-category="other" class="reference-item col-lg-3 col-md-6">
+
+                  <!-- <div data-category="other" class="reference-item col-lg-3 col-md-6">
                     <div class="reference"><a href="#"><img src="img/portfolio-6.jpg" alt="" class="img-fluid">
                         <div class="overlay">
                           <div class="inner">
