add sekp to projects edit technology bar and footer socials

--- a/index.html
+++ b/index.html
@@ -502,22 +502,62 @@
                     </div>
                   </div>
 
-                  <!-- <div data-category="other" class="reference-item col-lg-3 col-md-6">
-                    <div class="reference"><a href="#"><img src="img/portfolio-6.jpg" alt="" class="img-fluid">
+                  <div data-category="java" class="reference-item col-lg-3 col-md-6">
+                    <div class="reference"><a href="#"><img src="img/portfolio-6.jpg" alt="" class="img-fluid gainsboro-frame">
                         <div class="overlay">
                           <div class="inner">
-                            <h3 class="h4 reference-title">Project name 6</h3>
-                            <p>Short project description goes here...</p>
+                            <h3 class="h4 reference-title">SEKP</h3>
+                            <p>System eweidencji kompetencji pracownika</p>
                           </div>
                         </div></a>
-                      <div data-images="img/main-slider1.jpg,img/main-slider2.jpg,img/main-slider3.jpg" class="sr-only reference-description">
-                        <p>Projecting surrounded literature yet delightful alteration but bed men. Open are from long why cold. If must snug by upon sang loud left. As me do preference entreaties compliment motionless ye literature. Day behaviour explained law remainder. Produce can cousins account you pasture. Peculiar delicate an pleasant provided do perceive.</p>
-                        <p>Sitting mistake towards his few country ask. You delighted two rapturous six depending objection happiness something the. Off nay impossible dispatched partiality unaffected. Norland adapted put ham cordial. Ladies talked may shy basket narrow see. Him she distrusts questions sportsmen. Tolerably pretended neglected on my earnestly by. Sex scale sir style truth ought.</p>
-                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-download"></i> Download case study</a></p>
+                      <div data-images="img/main-slider6-1.jpg,img/main-slider6-2.jpg,img/main-slider6-3.jpg, img/main-slider6-4.jpg" class="sr-only reference-description">
+                        <p style="text-align: justify;">
+                          Aplikacja webowa napisana przy użyciu platformy 
+                          <a href="https://www.oracle.com/pl/java/technologies/java-ee-glance.html">Java Enterprise</a>. 
+                          Projekt na zaliczenie studiów
+                          podyplomowych <a href="http://java-podyplomowe.it.p.lodz.pl">"Nowoczesne aplikacje biznesowe w Java EE"</a>. 
+                          Stos technologiczny: EJB, Java Persitence Api,
+                          MySQL, JSP, JavaScript. Narzędzia: NetBeans, GlassFish, Maven   
+                        </p>
+                        <p style="text-align: justify;">
+                          Aplikacja o architekturze <a href="https://www.tutorialspoint.com/design_pattern/mvc_pattern.htm">MVC</a> 
+                          zapewniającej jej łatwość w konserwacji i skalowalność.
+                          System umożliwia agregację i edycję danych użytkowników wraz z poziomami uprawnień.
+                          Zadaniem programu jest przechowywanie danych kompetencjach pracowników firmy, takich
+                          jak: historia zatrudnienia, spis ukończonych uczelni oraz szkoleń, rodzaje nabytych umiejętności.
+                          Witryna pozwala na filtrowanie wyświetlonych danych celem szybkiego wyszukania istotnych danych.                           
+                        </p>
+                        <hr />
+                        <p style="text-align: justify; font-style: italic;">
+                          W części praktycznej pracy zrealizowany został system informatyczny umożliwiający gromadzenie
+                          informacji o pracownikach i kwalifikacjach przez nich nabywanych, a takż e wyszukiwanie
+                          pracowników m. in. w oparciu o w/w dane. System ten został zrealizowany w formie aplikacji 
+                          na platformę Java EE zgodnie z tematyką studiów. Aplikacja realizuje założone funkcje w sposób
+                          platformę Java EE zgodnie z tematyką studiów. Aplikacja realizuje założone funkcje w sposób poprawny. 
+                          Warto nadmienić użycie przez Autora nowoczesnego Criteria API do konstruowania złożonych zapytań 
+                          bazodanowych.
+                          <br />
+                          <br />
+                          <i>Opiekun pracy: dr inż. Michał Karbowańczyk</i>
+                        </p>
+                        <p class="buttons text-center">
+                          <a href="#" class="btn btn-outline-primary disabled">
+                            <i class="fa fa-globe"></i> Odwiedź stronę
+                          </a>
+                          <a href="https://drive.google.com/file/d/1NBXHHFKqLO49TuhxZ5Jsys_BnXCp26Ak/view"  
+                            class="btn btn-outline-primary">
+                              <i class="fa fa-download"></i> Pobierz dokumentację
+                          </a>
+                          <a href="https://github.com/pangeon/SEKP"  
+                            class="btn btn-outline-primary">
+                              <i class="fa fa-download"></i> Github
+                          </a>
+                          </p>
                       </div>
                     </div>
                   </div>
-                  <div data-category="seo" class="reference-item col-lg-3 col-md-6">
+
+                  <!-- <div data-category="seo" class="reference-item col-lg-3 col-md-6">
                     <div class="reference"><a href="#"><img src="img/portfolio-7.jpg" alt="" class="img-fluid">
                         <div class="overlay">
                           <div class="inner">
@@ -532,6 +572,7 @@
                       </div>
                     </div>
                   </div>
+
                   <div data-category="webdesign" class="reference-item col-lg-3 col-md-6">
                     <div class="reference"><a href="#"><img src="img/portfolio-8.jpg" alt="" class="img-fluid">
                         <div class="overlay">
@@ -547,6 +588,7 @@
                       </div>
                     </div>
                   </div> -->
+
             </div>
           </div>
         </div>
@@ -622,7 +664,20 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 text-center text-lg-left">
-            <p class="social"><a href="#" class="external facebook wow fadeInUp"><i class="fa fa-facebook"></i></a><a href="#" data-wow-delay="0.2s" class="external instagram wow fadeInUp"><i class="fa fa-instagram"></i></a><a href="#" data-wow-delay="0.4s" class="external gplus wow fadeInUp"><i class="fa fa-google-plus"></i></a><a href="#" data-wow-delay="0.6s" class="email wow fadeInUp"><i class="fa fa-envelope"></i></a></p>
+            <p class="social">
+              <a href="https://www.facebook.com/cecherz" class="external facebook wow fadeInUp">
+                <i class="fa fa-facebook"></i>
+              </a>
+              <a href="https://github.com/pangeon" data-wow-delay="0.2s" class="external instagram wow fadeInUp">
+                  <i class="fa fa-github"></i>
+              </a>
+              <a href="#" style="display: none;" data-wow-delay="0.4s" class="external gplus wow fadeInUp">
+                  <i class="fa fa-google-plus"></i>
+              </a>
+              <a href="mailto:kamil.cecherz@gmail.com" data-wow-delay="0.6s" class="email wow fadeInUp">
+                  <i class="fa fa-envelope"></i>
+              </a>
+          </p>
           </div>
           <!-- /.6-->
           <div class="col-md-6 text-center text-lg-right mt-4 mt-lg-0">
