--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </header>
         <div class="row services text-center">
           <div data-animate="fadeInUp" class="col-lg-4">
-            <div class="icon"><i class="fa fa-search"></i></div>
+            <div class="icon"><i class="fa fa-object-group"></i></div>
             <h3 class="heading mb-3 text-400">Grafika reklamowa</h3>
             <p class="text-center description">
               Banery reklamowe, broszury do druku, infografiki, logo, identyfikacja wizualna, prezentacje, 
@@ -167,7 +167,7 @@
             </p>
           </div>
           <div data-animate="fadeInUp" class="col-lg-4">
-            <div class="icon"><i class="fa fa-tachometer"></i></div>
+            <div class="icon"><i class="fa fa-code"></i></div>
             <h3 class="heading mb-3 text-400">Programowanie</h3>
             <p class="text-center description">
               Aplikacje webowe: administracja, wdrożenia i wsparcie. Obsługa gotowych systemów, tworzenie i poprawa funkcjonalności.
@@ -541,39 +541,55 @@
                           <i>Opiekun pracy: dr inż. Michał Karbowańczyk</i>
                         </p>
                         <p class="buttons text-center">
-                          <a href="#" class="btn btn-outline-primary disabled">
-                            <i class="fa fa-globe"></i> Odwiedź stronę
-                          </a>
-                          <a href="https://drive.google.com/file/d/1NBXHHFKqLO49TuhxZ5Jsys_BnXCp26Ak/view"  
-                            class="btn btn-outline-primary">
-                              <i class="fa fa-download"></i> Pobierz dokumentację
-                          </a>
-                          <a href="https://github.com/pangeon/SEKP"  
-                            class="btn btn-outline-primary">
-                              <i class="fa fa-download"></i> Github
-                          </a>
+                            <a href="#" class="btn btn-outline-primary disabled">
+                              <i class="fa fa-globe"></i> Odwiedź stronę
+                            </a>
+                            <a href="https://drive.google.com/file/d/1NBXHHFKqLO49TuhxZ5Jsys_BnXCp26Ak/view"  
+                              class="btn btn-outline-primary">
+                                <i class="fa fa-download"></i> Pobierz dokumentację
+                            </a>
+                            <a href="https://github.com/pangeon/SEKP"  
+                              class="btn btn-outline-primary">
+                                <i class="fa fa-download"></i> Github
+                            </a>
                           </p>
                       </div>
                     </div>
                   </div>
 
-                  <!-- <div data-category="seo" class="reference-item col-lg-3 col-md-6">
-                    <div class="reference"><a href="#"><img src="img/portfolio-7.jpg" alt="" class="img-fluid">
+                  <div data-category="python" class="reference-item col-lg-3 col-md-6">
+                    <div class="reference"><a href="#"><img src="img/portfolio-7.jpg" alt="" class="img-fluid gainsboro-frame">
                         <div class="overlay">
                           <div class="inner">
-                            <h3 class="h4 reference-title">Project name</h3>
-                            <p>Short project description goes here...</p>
+                            <h3 class="h4 reference-title">Taskello</h3>
+                            <p>Prosty i funkcjonalny planner zadań.</p>
                           </div>
                         </div></a>
-                      <div data-images="img/main-slider1.jpg,img/main-slider2.jpg,img/main-slider3.jpg" class="sr-only reference-description">
-                        <p>Projecting surrounded literature yet delightful alteration but bed men. Open are from long why cold. If must snug by upon sang loud left. As me do preference entreaties compliment motionless ye literature. Day behaviour explained law remainder. Produce can cousins account you pasture. Peculiar delicate an pleasant provided do perceive.</p>
-                        <p>Sitting mistake towards his few country ask. You delighted two rapturous six depending objection happiness something the. Off nay impossible dispatched partiality unaffected. Norland adapted put ham cordial. Ladies talked may shy basket narrow see. Him she distrusts questions sportsmen. Tolerably pretended neglected on my earnestly by. Sex scale sir style truth ought.</p>
-                        <p class="buttons text-center"><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a><a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-download"></i> Download case study</a></p>
+                      <div data-images="img/main-slider0.jpg,img/main-slider0.jpg,img/main-slider0.jpg" class="sr-only reference-description">
+                        <p style="text-align: justify;">
+                          
+                        </p>
+                        <p style="text-align: justify;">
+                          
+                        </p>
+                        <p class="buttons text-center">
+                          <a href="#" class="btn btn-outline-primary disabled">
+                            <i class="fa fa-globe"></i> Odwiedź stronę
+                          </a>
+                          <a href="https://drive.google.com/drive/folders/1_I8ncht73KGMFiQPxfCGAd6vTOVJUFb8?usp=sharing"  
+                            class="btn btn-outline-primary">
+                              <i class="fa fa-download"></i> Pobierz VM
+                          </a>
+                          <a href="https://github.com/pangeon/Taskello"  
+                            class="btn btn-outline-primary">
+                              <i class="fa fa-download"></i> Github
+                          </a>
+                        </p>
                       </div>
                     </div>
                   </div>
 
-                  <div data-category="webdesign" class="reference-item col-lg-3 col-md-6">
+                  <!-- <div data-category="webdesign" class="reference-item col-lg-3 col-md-6">
                     <div class="reference"><a href="#"><img src="img/portfolio-8.jpg" alt="" class="img-fluid">
                         <div class="overlay">
                           <div class="inner">
@@ -600,22 +616,52 @@
         <div class="col-md-12">
           <div class="row align-items-center">
             <div class="col-lg-2 col-md-4 col-sm-6">
-              <div class="customer"><img src="img/customers/logo-1.svg" title="brand logo" data-placement="bottom" data-toggle="tooltip" alt="" class="img-fluid d-block mx-auto"></div>
+              <div class="customer">
+                <a href="https://getbootstrap.com/">
+                  <img src="img/customers/logo-1.svg" title="Bootstrap" data-placement="bottom" 
+                  data-toggle="tooltip" alt="Bootstrap logo" class="img-fluid d-block mx-auto">
+                </a>
+              </div>
             </div>
             <div class="col-lg-2 col-md-4 col-sm-6">
-              <div class="customer"><img src="img/customers/logo-2.svg" title="brand logo" data-placement="bottom" data-toggle="tooltip" alt="" class="img-fluid d-block mx-auto"></div>
+              <div class="customer">
+                <a href="https://pl.wordpress.org/">
+                  <img src="img/customers/logo-2.svg" title="Wordpress" data-placement="bottom" 
+                  data-toggle="tooltip" alt="Wordpress logo" class="img-fluid d-block mx-auto">
+                </a>
+              </div>
             </div>
             <div class="col-lg-2 col-md-4 col-sm-6">
-              <div class="customer"><img src="img/customers/logo-3.svg" title="brand logo" data-placement="bottom" data-toggle="tooltip" alt="" class="img-fluid d-block mx-auto"></div>
+              <div class="customer">
+                <a href="https://www.oracle.com/pl/java/technologies/java-ee-glance.html">
+                  <img src="img/customers/logo-3.svg" title="Java EE" data-placement="bottom" 
+                  data-toggle="tooltip" alt="Java logo" class="img-fluid d-block mx-auto">
+                </a>
+              </div>
             </div>
             <div class="col-lg-2 col-md-4 col-sm-6">
-              <div class="customer"><img src="img/customers/logo-4.svg" title="brand logo" data-placement="bottom" data-toggle="tooltip" alt="" class="img-fluid d-block mx-auto"></div>
+              <div class="customer">
+                <a href="https://spring.io/">
+                  <img src="img/customers/logo-4.svg" title="Spring" data-placement="bottom" 
+                  data-toggle="tooltip" alt="Spring logo" class="img-fluid d-block mx-auto">
+                </a>
+              </div>
             </div>
             <div class="col-lg-2 col-md-4 col-sm-6">
-              <div class="customer"><img src="img/customers/logo-5.svg" title="brand logo" data-placement="bottom" data-toggle="tooltip" alt="" class="img-fluid d-block mx-auto"></div>
+              <div class="customer">
+                <a href="https://flask.palletsprojects.com/">
+                  <img src="img/customers/logo-5.svg" title="Flask" data-placement="bottom" 
+                  data-toggle="tooltip" alt="Flask logo" class="img-fluid d-block mx-auto">
+                </a>
+              </div>
             </div>
             <div class="col-lg-2 col-md-4 col-sm-6">
-              <div class="customer"><img src="img/customers/logo-6.svg" title="brand logo" data-placement="bottom" data-toggle="tooltip" alt="" class="img-fluid d-block mx-auto"></div>
+              <div class="customer">
+                <a href="https://www.djangoproject.com/">
+                  <img src="img/customers/logo-6.svg" title="Django" data-placement="bottom" 
+                  data-toggle="tooltip" alt="Django logo" class="img-fluid d-block mx-auto">
+                </a>
+              </div>
             </div>
           </div>
         </div>
