add Taskello project

--- a/index.html
+++ b/index.html
@@ -565,12 +565,18 @@
                             <p>Prosty i funkcjonalny planner zadań.</p>
                           </div>
                         </div></a>
-                      <div data-images="img/main-slider0.jpg,img/main-slider0.jpg,img/main-slider0.jpg" class="sr-only reference-description">
+                      <div data-images="img/main-slider7-1.jpg,img/main-slider7-2.jpg,img/main-slider7-3.jpg,img/main-slider7-4.jpg" class="sr-only reference-description">
                         <p style="text-align: justify;">
-                          
+                          Aplikacja napisana w Pythonie przy użyciu frameworka <a href="https://flask.palletsprojects.com/">Flask</a>
+                          oraz baz danych <a href="https://www.mysql.com/">MySQL</a> podczas współpracy z Dianet Agency w ramach stażu,
+                          jako skuteczne narzędzie do planowania w firmie.
                         </p>
                         <p style="text-align: justify;">
-                          
+                          Prototyp aplikacji stworzony do zarządzania podziałem, zakresem i czasem zadań pracowników.
+                          System pozwala na organizację obowiązków uwzględniając ich kategorie. Umożliwia 
+                          wyspecyfikowanie dla konkretnego zlecenia linku z załącznikiem, priorytetu, statusu, 
+                          ram czasowych: początek i zakończenie. Wgląd do danych systemu jest możliwy po uprzedniej rejestracji
+                          poprzez witrynę WWW.
                         </p>
                         <p class="buttons text-center">
                           <a href="#" class="btn btn-outline-primary disabled">
